[gd_scene load_steps=2 format=3 uid="uid://dgw6eltakitgw"]

[ext_resource type="Script" path="res://scripts/interact_list.gd" id="1_8awh3"]

[node name="InteractList" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_8awh3")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
text = "Accepted blocks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HideTooltipButton" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -30.5
offset_right = -30.0
offset_bottom = 30.5
grow_horizontal = 0
grow_vertical = 2
text = "Hide tooltip"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="AcceptedBlocks" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="AddBlock" type="Button" parent="."]
layout_mode = 2
text = "+"

[connection signal="pressed" from="Label/HideTooltipButton" to="." method="_on_hide_place_button_pressed"]
[connection signal="pressed" from="AddBlock" to="." method="_on_add_block_pressed"]
